Update gdx-teavm to 1.6.1 (#43)
* Update teavm

* Small fix

* Update gdx-teavm